[fix]: update grade section return type
